@@ -1,3 +1,10 @@
+beryllium (0.4.3) debian;
+
+  * New field: Accession number is hidden by default
+  * Clips & images uses different series no/series uid
+
+ -- Pavel Bludov <pbludov@gmail.com>  Thu, 13 Feb 2014 11:22:00 +0900
+
 beryllium (0.4.2) debian;
 
   * New field: Accession number
